@@ -349,13 +349,21 @@ module UploadColumn
       
       self.original_basename = basename
  
-      versions.each { |k, v| v.send(:assign, file, directory) } if versions
+      versions.each { |k, v| v.send(:assign_version, self.path, self.relative_dir, self.filename, self.original_basename, self.ext) } if versions
       
       File.chmod(options[:permissions], self.path)
       
       set_magic_columns
       
       return true
+    end
+    
+    def assign_version( path, directory, filename, basename, ext )
+      self.relative_dir = directory
+      self.filename = filename
+      self.ext = ext
+      self.original_basename = basename
+      FileUtils.copy_file( path, self.path )
     end
     
     def save
@@ -624,9 +632,9 @@ module UploadColumn
           self.instance.send("#{self.attribute}_mime_type=".to_sym, self.mime_type) if self.instance.class.column_names.include?("#{self.attribute}_mime_type")
           self.versions.each { |k, v| v.send(:convert!, options[:force_format]) } if self.versions
         end
-        if suffix.nil? and options[:versions].is_a?( Hash )
+        if suffix.nil? and options[:versions].respond_to?( :to_hash )
         
-          options[:versions].each do |name, size|
+          options[:versions].to_hash.each do |name, size|
             # Check if size is a string, and if so resize the respective version
             if size.is_a?( String )
               if options[:crop]
@@ -640,8 +648,8 @@ module UploadColumn
               self.versions[name].process! do |img|
                 img = size.call(img)
               end
-            else
-              raise TypeError.new( "#{size.inspect} is not a valid option, must be of format '123x123' or a Proc.")
+            elsif size != :none
+              raise TypeError.new( "#{size.inspect} is not a valid option, must be of format '123x123' or a Proc or :none.")
             end
           end
         end
